2020-01-29  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] Extra packages needed to successfully run API tests (cups-daemon and fonts-liberation)
        https://bugs.webkit.org/show_bug.cgi?id=206925

        Reviewed by Carlos Garcia Campos.

        Add cups-daemon to the list of packages to be installed, which is necessary to sucessfully
        run the printing related GTK API tests. Add also the liberation fonts, which are needed to
        run the complex text controller API tests.

        * gtk/install-dependencies:
        * wpe/install-dependencies: Don't add cups packages, because WPE currently doesn't run print-related API test.

2020-01-28  Tim Horton  <timothy_horton@apple.com>

        macCatalyst: Right clicking on a link follows it immediately
        https://bugs.webkit.org/show_bug.cgi?id=206919
        <rdar://problem/58936679>

        Reviewed by Wenson Hsieh.

        * TestWebKitAPI/Tests/WebKitCocoa/MacCatalystMouseSupport.mm:
        (TEST):
        Add a test ensuring that mouseup is still called with the secondary button,
        even if the event's buttonmask is 0.

2020-01-28  Jonathan Bedard  <jbedard@apple.com>

        TestWebKitAPI: Conditionalize device orientation tests on ENABLE(DEVICE_ORIENTATION)
        https://bugs.webkit.org/show_bug.cgi?id=206913
        <rdar://problem/58973357>

        Reviewed by Chris Dumez.

        * TestWebKitAPI/Tests/WebKitCocoa/DeviceOrientation.mm:

2020-01-28  Tim Horton  <timothy_horton@apple.com>

        macCatalyst: Triple clicking to select a sentence results in an empty selection
        https://bugs.webkit.org/show_bug.cgi?id=206863
        <rdar://problem/58776993>

        Reviewed by Wenson Hsieh.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKitCocoa/MacCatalystMouseSupport.mm: Added.
        (-[WKTestingEvent locationInView:]):
        (-[WKTestingEvent _setButtonMask:]):
        (-[WKTestingEvent _buttonMask]):